--- a/style.css
+++ b/style.css
@@ -73,86 +73,15 @@
     background-color: rgba(214, 212, 212, 0.466);
 }
 
-.menu-bar-list-1 {
+.menu-bar-list-1, .menu-bar-list-2, .menu-bar-list-3, .menu-bar-list-4,
+.menu-bar-list-5, .menu-bar-list-6, .menu-bar-list-7, .menu-bar-list-8,
+.menu-bar-list-9, .menu-bar-list-10{
     border-bottom: 1px dotted black;
     border-right: 1px dotted black;
     padding: 15px 14.6px;
     font-size: 17px;
     position: relative;
 }
-
-.menu-bar-list-2 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-3 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-4 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-5 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-6 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-7 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-8 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-9 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
-.menu-bar-list-10 {
-    border-bottom: 1px dotted black;
-    border-right: 1px dotted black;
-    padding: 15px 14.6px;
-    font-size: 17px;
-    position: relative;
-}
-
 
 .collect-info {
     list-style: none;
@@ -199,209 +128,45 @@
     color: #f1f1f1 !important;
 }
 
-.menu-bar-list-8:hover {
+.menu-bar-list-8:hover, .menu-bar-list-9:hover,
+.menu-bar-list-10:hover, .menu-bar-list-11:hover{
     background-color: #333333;
     color: #f1f1f1 !important;
 }
 
-.menu-bar-list-9:hover {
-    background-color: #333333;
-    color: #f1f1f1 !important;
-}
-
-.menu-bar-list-10:hover {
-    background-color: #333333;
-    color: #f1f1f1 !important;
-}
-
-.menu-bar-list-11:hover {
-    background-color: #333333;
-    color: #f1f1f1 !important;
-}
-
-.menu-bar-list-2:hover .dropdown-content-1 {
+.menu-bar-list-2:hover .dropdown-content-1, .menu-bar-list-3:hover .dropdown-content-2,
+.menu-bar-list-4:hover .dropdown-content-3, .menu-bar-list-5:hover .dropdown-content-4,
+.menu-bar-list-6:hover .dropdown-content-5, .menu-bar-list-7:hover .dropdown-content-6{
     display: block;
 }
 
-.menu-bar-list-3:hover .dropdown-content-2 {
-    display: block;
-}
-
-.menu-bar-list-4:hover .dropdown-content-3 {
-    display: block;
-}
-
-.menu-bar-list-5:hover .dropdown-content-4 {
-    display: block;
-}
-
-.menu-bar-list-6:hover .dropdown-content-5 {
-    display: block;
-}
-
-.menu-bar-list-7:hover .dropdown-content-6 {
-    display: block;
-}
-
-.dropdown-content-1 {
-    top: 45px;
+.dropdown-content-1, .dropdown-content-2, .dropdown-content-3,
+.dropdown-content-4, .dropdown-content-5, .dropdown-content-6{
+    top: 53px;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 0px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #ff6600;
-    left: 0;
-    padding: 10px 0;
-    opacity: 1 !important;
-    overflow: hidden;
-}
-
-.dropdown-content-2 {
-    top: 45px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #c40a2a;
     left: 0;
     padding: 10px 0;
     opacity: 1 !important;
     overflow: hidden;
     width: 100%;
+    z-index: 2;
 }
 
-.dropdown-content-3 {
-    top: 45px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #841540;
-    left: 0;
-    padding: 10px 0;
-    opacity: 1 !important;
-    overflow: hidden;
-    width: 100%;
-}
-
-.dropdown-content-4 {
-    top: 45px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #098346;
-    left: 0;
-    padding: 10px 0;
-    opacity: 1 !important;
-    overflow: hidden;
-    width: 100%;
-}
-
-.dropdown-content-5 {
-    top: 45px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #1399be;
-    left: 0;
-    padding: 10px 0;
-    opacity: 1 !important;
-    overflow: hidden;
-    width: 100%;
-}
-
-
-.dropdown-content-6 {
-    top: 45px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-top: 8px solid #8768de;
-    left: 0;
-    padding: 10px 0;
-    opacity: 1 !important;
-    overflow: hidden;
-    width: 100%;
-}
-
-.dropdown-content-1 a {
+.dropdown-content-1 a, .dropdown-content-2 a, .dropdown-content-3 a, 
+.dropdown-content-4 a, .dropdown-content-5 a, .dropdown-content-6 a{
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content-2 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content-3 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content-4 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content-5 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content-6 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content-1 a:hover {
-    background-color: rgb(192, 189, 189);
-    border-bottom: 1px solid black;
-}
-
-.dropdown-content-2 a:hover {
-    background-color: rgb(192, 189, 189);
-    border-bottom: 1px solid black;
-
-}
-
-.dropdown-content-3 a:hover {
-    background-color: rgb(192, 189, 189);
-    border-bottom: 1px solid black;
-}
-
-.dropdown-content-4 a:hover {
-    background-color: rgb(192, 189, 189);
-    border-bottom: 1px solid black;
-}
-
-.dropdown-content-5 a:hover {
-    background-color: rgb(192, 189, 189);
-    border-bottom: 1px solid black;
-}
-
-.dropdown-content-6 a:hover {
+.dropdown-content-1 a:hover, .dropdown-content-2 a:hover,
+.dropdown-content-3 a:hover, .dropdown-content-4 a:hover,
+.dropdown-content-5 a:hover, .dropdown-content-6 a:hover{
     background-color: rgb(192, 189, 189);
     border-bottom: 1px solid black;
 }
@@ -489,21 +254,16 @@
     display: flex;
 }
 
-.item1 {
+.item1, .item2, .item3, .item4, .item5, .item6, .item7, .item8, .item9 {
     display: flex;
     margin-top: 20px;
 }
 
-.left-item1 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item1 {
+.left-item1, .right-item1, .left-item2, .right-item2,
+.left-item3, .right-item3, .left-item4, .right-item4,
+.left-item5, .right-item5, .left-item6, .right-item6,
+.left-item7, .right-item7, .left-item8, .right-item8,
+.left-item9{
     margin-right: 15px;
     height: 222px;
     width: 347px;
@@ -546,182 +306,6 @@
 
 .right-item1-list a:hover {
     border-bottom: 1px solid grey;
-}
-
-.item2 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item2 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item2 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item3 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item3 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item3 {
-
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item4 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item4 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item4 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item5 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item5 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item5 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item6 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item6 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item6 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item7 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item7 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item7 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item8 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item8 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.right-item8 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
-}
-
-.item9 {
-    display: flex;
-    margin-top: 20px;
-}
-
-.left-item9 {
-    margin-right: 15px;
-    height: 222px;
-    width: 347px;
-    border: 1px solid rgb(168, 167, 167);
-    background-color: #f2f2f2;
-    box-shadow: 3px 3px rgb(199, 198, 198);
 }
 
 .event-details {
